--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,46 @@
 {
-  "name": "Hello, World!",
-  "description": "Navigate and execute custom js script",
-  "version": "1.0",
-  "manifest_version": 3,
-  "permissions": [
-	"tabs",
-    "activeTab",
-    "storage",
-    "scripting"
-  ],
-  "background": {
-	"service_worker": "background.js"
-  },
-  "content_scripts": [{
-	"matches": [
-		"https://example.com/",
-		"https://www.delfi.lv/",
-		"https://github.com/*"
+	"name": "SiebelGo Popup",
+	"description": "Show custom popup for easier navigation",
+	"version": "1.0",
+	"manifest_version": 3,
+	"permissions": [
+		"tabs",
+		"activeTab",
+		"storage",
+		"scripting"
 	],
-	"css": ["contentStyles.css"],
-	"js": ["contentScript.js"]
-  }],
-  "action": {},
-  "host_permissions": [
-	"<all_urls>",
-	"https://example.com/",
-	"https://www.delfi.lv/",
-	"https://github.com/"
-  ],
-  "commands": {
-    "_execute_action": {
-      "suggested_key": {
-        "default": "Ctrl+Home",
-        "mac": "Command+Home"
-      }
-    }
-  }
+	"background": {
+		"service_worker": "background.js"
+	},
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"css": [
+				"contentStyles.css"
+			],
+			"js": [
+				"contentScript.js"
+			]
+		}
+	],
+	"action": {},
+	"host_permissions": [
+		"<all_urls>"
+	],
+	"commands": {
+		"_execute_action": {
+			"suggested_key": {
+				"default": "Ctrl+Home",
+				"mac": "Command+Home"
+			}
+		}
+	},
+	"web_accessible_resources": [
+		{
+		"resources": [ "popup.html"],
+		"matches": [ "<all_urls>" ]
+	  }
+	]
 }
